# opentimestamps-client

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml  release.yml
src/: calendar.rs  cli.rs  error.rs  lib.rs  main.rs  verifier.rs
src/commands/: info.rs  mod.rs  stamp.rs  upgrade.rs  verify.rs
src/ots/: attestation.rs  digest.rs  error.rs  mod.rs  op.rs  ser.rs  timestamp.rs
